--- a/config/boards/shields/caldera.conf
+++ b/config/boards/shields/caldera.conf
@@ -1,4 +1,5 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CLTR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_KEYBOARD_NAME="TOMALE"
+CONFIG_ZMK_KEYBOARD_NAME="CALDERA"
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
